Fix picture not showing

--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -31,7 +31,7 @@ body{
     float: right;
     text-transform: lowercase;
     
-    background:url(/Portfolio/resources/img.png);
+    background:url(../resources/img.png);
     background-size: contain ;
     background-position:center;
     background-repeat: no-repeat;
@@ -54,7 +54,7 @@ body{
     float: right;
     text-transform: lowercase;
     
-    background:url(/Portfolio/resources/img.png);
+    background:url(../resources/img.png);
     background-size: contain ;
     background-position:center;
     background-repeat: no-repeat;
